--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+  <% if current_user %>
+    <%= current_user.username %>
+    <%= button_to "Sign Out", session_url, method: :delete %>
+  <% end %>
+
 <%= yield %>
 
 </body>
