--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,15 @@
 <h1>Show</h1>
+
+  <form action="<%= goals_url %>" method="post">
+    <%= auth_token %>
+    <label>Body:
+      <textarea name="goal[body]"></textarea>
+    </label>
+    <input type="submit" value="Create Goal">
+  </form>
+
+<ul>
+  <% @user.goals.each do |goal| %>
+    <li><%= goal.body %></li>
+  <% end %>
+</ul>
