Allow creating public and private goals

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,14 @@
     <label>Body:
       <textarea name="goal[body]"></textarea>
     </label>
+    <br>
+    <label>
+      Private: <input type="radio" name="goal[status]" value="private" checked>
+    </label>
+    <label>
+      Public: <input type="radio" name="goal[status]" value="public">
+    </label>
+    <br>
     <input type="submit" value="Create Goal">
   </form>
 
