almost added checkboxes

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,5 +9,18 @@
     <input type="password" name="user[password]">
   </label>
   <br>
+
+
+  <label>
+    happy<input type="checkbox" name="user[user_disposition][]" value="happy">
+  </label>
+  <label>
+    sad<input type="checkbox" name="user[user_disposition][]" value="sad">
+  </label>
+  <label>
+    gassy<input type="checkbox" name="user[user_disposition][]" value="gassy">
+  </label>
+
+
   <input type="submit" value="Sign Up">
 </form>
